--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block tittle %}{% endblock %}</title>
+  <meta charset="UTF-8">
+  <title>App del Clima</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+  {% block content %}{% endblock %}
 </body>
 </html>
